--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,23 @@
 ---
-
+import BaseLayout from "../layouts/BaseLayout.astro";
+import Hero from "../components/hero.astro";
+import FeaturedProjects from "../components/FeaturedProjects.astro";
+import AccessibilityApproach from "../components/AccessibilityApproach.astro";
+import Skills from "../components/Skills.astro";
+import Contact from "../components/Contact.astro";
+import Footer from "../components/Footer.astro";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<link rel="icon" href="/favicon.ico" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<BaseLayout
+  title="Olamide Fasida: Web Dev & Digital Accessibility Specialist"
+  description="Portfolio of Olamide Fasida, Web Developer and Digital Accessibility Specialist."
+  showPageNav={false}>
+  <main id="main">
+    <Hero />
+    <FeaturedProjects />
+    <AccessibilityApproach />
+    <Skills />
+    <Contact />
+  </main>
+
+</BaseLayout>
