Edited the buttons colors

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -14,11 +14,11 @@
   --text-main: #000000;
   --text-muted: #000000;
 
-  --accent-primary: #228B22;
-  --accent-primary-hover: #086a08e7;
+  --accent-primary: #109443;
+  --accent-primary-hover: #206EAE;
 
   --accent-secondary: #228B22;
-  --accent-secondary-hover: #148514a1;
+  --accent-secondary-hover: #0f510f;
 
   --button-text: #ffffff;
 
